# rplayer

./: Cargo.toml  README.md  rplayer
src/: audio_controller.rs  file_explorer.rs  file_manager.rs  graphics.rs  lib.rs  main.rs
