[package]
name = "rplayer"
version = "0.1.0"
authors = ["goganoid"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
minimp3 = "0.3.5"
lru-cache = "0.1.2"
rand = "0.7.3"
unicode-width = "0.1.7"
mp3-metadata = "0.3.3"
anyhow = "1.0.31"
cpal = "0.11.0"
crossterm = {version = "0.17.5", features=["event-stream"]}
futures = "0.3.5"
futures-timer = "3.0.2"
crossbeam = "0.7.3"
crossbeam-utils = "0.7.2"
futures-util = "0.3.5"
async-std = "1.6.0"

